# py-pkgs

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py  test.bat  test.sh
contrib/pyproject1/: setup.cfg
contrib/pyproject2/: setup.py
contrib/pyproject3/: setup.cfg
contrib/pyproject3/package3/: __init__.py
contrib/pyproject4/: module4.py  setup.cfg
contrib/pyproject5/: setup.cfg
contrib/pyproject5/package/web/css/: main.css
contrib/pyproject5/package/web/js/: utils.js
contrib/pyproject6/: LICENSE  setup.cfg
contrib/pyproject7/: setup.cfg
contrib/pyproject8a1/: .gitignore  private_requirements.py  pyproject.toml
contrib/pyproject8a2/: private-requirements.txt  setup.cfg  setup.py
contrib/pyproject8b/: pyproject.toml
contrib/pyproject9/commons/: pyproject.toml
contrib/pyproject9/specific1/: pyproject.toml
contrib/pyproject9/specific1/pyproject9/specific1/: __init__.py
pkg1/: setup.py
project/: __init__.py  about.py
src/: __init__.py  __main__.py
sub/project0/: README.md  setup.cfg
sub/project0/package/: __init__.py
sub/project1/: setup.py
sub/project2/: README.md  about.py  setup.cfg  setup.py
sub/project2/project/: module2.py
sub/project3/: setup.cfg
sub/project3/package/: module3.py
sub/project4/: setup.cfg
sub/project4/project/web/: index.html
sub/project5/: MANIFEST.in  setup.cfg
sub/project5/project/: module5.py
sub/project6/: MANIFEST.in  setup.cfg  setup.py
sub/project7a1/: README.md  pyproject.toml
sub/project7a2/: README.md  private-requirements.txt  setup.py
sub/project7b/: pyproject.toml
