[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "project"
description = "This project is an example"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy"
]
dependencies = [
    "aiohttp",
    "requests"
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "build",
    "flake8",
    "isort"
]

[tool.setuptools]
package-dir = { package = "src" }

[tool.setuptools.dynamic]
version = { attr = "src.__version__" }
