[metadata]
name = pyproject1
version = attr: package.__version__
description = This project is an example
long_description = file: README.md, CHANGELOG.md, LICENSE
author = Oshinko
author_email = osnk@renjaku.jp
license = MIT License
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
python_requires = >= 3.8
packages = find:
