[metadata]
name = pyproject4
version = 0.0.0
description = This project is an example
author = Oshinko
author_email = osnk@renjaku.jp
license = MIT License
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.0
    Programming Language :: Python :: 3.1
    Programming Language :: Python :: 3.2
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
python_requires = >= 2.6
packages = find_namespace:
py_modules = module4
install_requires =
    importlib; python_version == "2.6"
    pathlib; python_version == "2.6"
