[metadata]
name = pyproject8a2
version = 0.0.0
description = This project is an example
long_description = file: README.md, LICENSE
author = Oshinko
author_email = osnk@renjaku.jp
license = The Unlicense (Unlicense)
license_files = LICENSE
classifiers =
	License :: OSI Approved :: The Unlicense (Unlicense)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
