[metadata]
name = project2
version = 0.0.0
description = This project is an example
long_description = file: README.md
author = Oshinko
author_email = osnk@renjaku.jp
license = MIT License
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
python_requires = >= 3.8
packages = find_namespace:
include_package_data = True

[options.package_data]
* = *.*
