[metadata]
name = project4
version = 0.0.0
description = This project is an example
author = Oshinko
author_email = osnk@renjaku.jp
license = MIT License
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.0
    Programming Language :: Python :: 3.1
    Programming Language :: Python :: 3.2
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
python_requires = >= 2.7
packages = find_namespace:
include_package_data = True

[options.packages.find]
exclude = *.cache

[options.package_data]
* = *.*

[options.exclude_package_data]
* = *.cache
