[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "project7b"
version = "0.0.0"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy"
]
dependencies = [
]
